<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.game.database.rawg.data.model.detail.GameDetailResponse" />

        <variable
            name="result"
            type="com.game.database.rawg.data.model.list.GameResult" />

        <variable
            name="vm"
            type="com.game.database.rawg.ui.fragment.detail.DetailViewModel" />

        <variable
            name="state"
            type="com.game.database.rawg.common.utils.State" />

        <variable
            name="adapter"
            type="com.game.database.rawg.ui.adapters.screenshots.ScreenshotsAdapter" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/persistense_background"
        android:elevation="8dp"
        android:overScrollMode="never"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="380dp"
        app:fillingView="@{state}"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view2"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/hint_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{item.name}"
                android:textColor="@color/black40"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="CyberPunk 2077" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:dateFormat="@{item.released}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_detail"
                tools:text="10 декабря 2020 г." />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_top"
                app:layout_constraintBottom_toBottomOf="@+id/linear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linear" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(item.rating)}"
                    android:textColor="@color/black40"
                    android:textStyle="bold"
                    tools:text="7.4" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/linear"
                app:layout_constraintEnd_toStartOf="@+id/linear2"
                app:layout_constraintStart_toEndOf="@+id/linear"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(item.addedByStatus.toplay)}"
                    android:textColor="@color/black40"
                    android:textStyle="bold"
                    tools:text="4539" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_play"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/linear"
                app:layout_constraintEnd_toStartOf="@id/linear3"
                app:layout_constraintStart_toEndOf="@+id/linear1"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(item.addedByStatus.playing)}"
                    android:textColor="@color/black40"
                    android:textStyle="bold"
                    tools:text="2513" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playing"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/linear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linear2"
                app:layout_constraintTop_toBottomOf="@+id/view3">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(item.addedByStatus.beaten)}"
                    android:textColor="@color/black40"
                    android:textStyle="bold"
                    tools:text="2513" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beaten"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToFavorite"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:padding="5dp"
                android:text="@string/add_to_list"
                android:textAllCaps="false"
                android:textColor="@color/black40"
                android:textSize="12sp"
                app:backgroundTint="@color/background"
                app:icon="@drawable/ic_add"
                app:iconTint="@color/black40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textColor="@color/black40"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addToFavorite" />

            <kr.co.prnd.readmore.ReadMoreTextView
                android:id="@+id/materialTextView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black40"
                android:textSize="16sp"
                app:htmlText="@{item.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5"
                app:readMoreColor="@color/purple_500"
                app:readMoreMaxLine="4"
                app:readMoreText="…Read more"
                tools:text="Description of the game" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/genre"
                android:textColor="@color/black40"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView8"
                app:genres="@{item.genres}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/screenshots"
                android:textColor="@color/black40"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/screenshots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:adapter="@{adapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView7"
                tools:listitem="@layout/item_screenshots" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tags"
                android:textColor="@color/black40"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/screenshots" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tags="@{result.gameTags}"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>